--- a/midterm/midterm-2023.ipynb
+++ b/midterm/midterm-2023.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harischandra359/hds5210-2023/blob/main/midterm/midterm-2023.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "yKarNa-_CUnS"
       },
       "source": [
@@ -55,11 +65,11 @@
       "cell_type": "code",
       "execution_count": 90,
       "metadata": {
-        "id": "s_maLHqxCUnU",
-        "outputId": "3d14ddb5-1139-456e-84af-04a1c2a013d9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "s_maLHqxCUnU",
+        "outputId": "3d14ddb5-1139-456e-84af-04a1c2a013d9"
       },
       "outputs": [
         {
@@ -217,11 +227,11 @@
       "cell_type": "code",
       "execution_count": 91,
       "metadata": {
-        "id": "FLBhd8qSCUnV",
-        "outputId": "fff41665-2439-4c6d-c1e9-dbc3be300fe1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "FLBhd8qSCUnV",
+        "outputId": "fff41665-2439-4c6d-c1e9-dbc3be300fe1"
       },
       "outputs": [
         {
@@ -277,11 +287,11 @@
       "cell_type": "code",
       "execution_count": 92,
       "metadata": {
-        "id": "y_1dMpeZCUnV",
-        "outputId": "8c3a47ea-25c3-48ed-9d1b-6c54cf772d50",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "y_1dMpeZCUnV",
+        "outputId": "8c3a47ea-25c3-48ed-9d1b-6c54cf772d50"
       },
       "outputs": [
         {
@@ -338,11 +348,11 @@
       "cell_type": "code",
       "execution_count": 93,
       "metadata": {
-        "id": "7yxH3dqVCUnV",
-        "outputId": "842a09f7-598a-470f-cd3c-a0497fb0cdbb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7yxH3dqVCUnV",
+        "outputId": "842a09f7-598a-470f-cd3c-a0497fb0cdbb"
       },
       "outputs": [
         {
@@ -382,11 +392,11 @@
       "cell_type": "code",
       "execution_count": 94,
       "metadata": {
-        "id": "podQ7DZMCUnW",
-        "outputId": "a9be568e-ddcb-4617-af41-ece1278173ea",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "podQ7DZMCUnW",
+        "outputId": "a9be568e-ddcb-4617-af41-ece1278173ea"
       },
       "outputs": [
         {
@@ -466,11 +476,11 @@
       "cell_type": "code",
       "execution_count": 97,
       "metadata": {
-        "id": "2XMDmnv8CUnW",
-        "outputId": "0dc908e3-128f-44c7-c017-6cceb5605429",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "2XMDmnv8CUnW",
+        "outputId": "0dc908e3-128f-44c7-c017-6cceb5605429"
       },
       "outputs": [
         {
@@ -568,12 +578,12 @@
       "cell_type": "code",
       "execution_count": 98,
       "metadata": {
-        "id": "CHgEZlATCUnW",
-        "outputId": "11ebfcd8-47f2-42b4-d86c-7d8f28db966b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 263
-        }
+        },
+        "id": "CHgEZlATCUnW",
+        "outputId": "11ebfcd8-47f2-42b4-d86c-7d8f28db966b"
       },
       "outputs": [
         {
@@ -680,7 +690,8 @@
       "version": "3.9.16"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
