--- a/week09/week09_assignment_1.ipynb
+++ b/week09/week09_assignment_1.ipynb
@@ -13,7 +13,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "DHuYGmACyQxo"
+        "id": "aMc4AgKQS0oP"
       },
       "source": [
         "# Week 9 Assignment"
@@ -22,7 +22,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "twmkcUFOyQxq"
+        "id": "HCn7gtE6S0oS"
       },
       "source": [
         "We had two major areas of discussion this week.  The first was all about how to work with string data - parsing and splitting strings using basic string fuctions as well as more complex string matching using regular expressions.  The second was a basic introduction to Pandas with a few different examples of how to load data into Pandas and then visualize it using graphs (histogram, distribution, scatter, bar, timeseries).\n",
@@ -36,7 +36,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "s_XxqprhyQxq"
+        "id": "6ikxMTJxS0oS"
       },
       "source": [
         "### 36.1 What is the output of the following code?\n",
@@ -56,9 +56,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 81,
+      "execution_count": 1,
       "metadata": {
-        "id": "GV4EaAuiyQxq"
+        "id": "WIJsZMwxS0oT"
       },
       "outputs": [],
       "source": [
@@ -69,7 +69,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "7FPbQWzwyQxr"
+        "id": "tfHemx15S0oT"
       },
       "source": [
         "### 36.2 What is the result of the code below?\n",
@@ -89,9 +89,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 82,
+      "execution_count": 2,
       "metadata": {
-        "id": "U_zBFuYPyQxr"
+        "id": "ilaJ4y32S0oU"
       },
       "outputs": [],
       "source": [
@@ -101,7 +101,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6g0bO3EXyQxr"
+        "id": "Ict3O2vhS0oU"
       },
       "source": [
         "### 36.3 How long is the `parts` list that results from the code below?\n",
@@ -122,9 +122,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 83,
+      "execution_count": 3,
       "metadata": {
-        "id": "_5aDxTtXyQxr"
+        "id": "sQVkLLH0S0oU"
       },
       "outputs": [],
       "source": [
@@ -134,7 +134,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "M49BwCM-yQxr"
+        "id": "Zf_6iQjZS0oV"
       },
       "source": [
         "### 36.4 How long is the `parts` list that results from the subtly different code below?\n",
@@ -155,9 +155,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 84,
+      "execution_count": 4,
       "metadata": {
-        "id": "F2DXE29MyQxr"
+        "id": "5jv5oSDoS0oV"
       },
       "outputs": [],
       "source": [
@@ -167,7 +167,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "T4N9bcZOyQxr"
+        "id": "AAws2kyCS0oV"
       },
       "source": [
         "### 38.1 How do you access a list of all the column names in a data frame?\n",
@@ -187,9 +187,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 85,
+      "execution_count": 5,
       "metadata": {
-        "id": "T5l6LlHByQxr"
+        "id": "YN3w14sgS0oV"
       },
       "outputs": [],
       "source": [
@@ -199,7 +199,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "ZnkiOYCIyQxr"
+        "id": "DmmkliEJS0oV"
       },
       "source": [
         "### 38.2 Can the following data be converted directly to a dataframe?\n",
@@ -221,9 +221,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 86,
+      "execution_count": 6,
       "metadata": {
-        "id": "UTbgtEjuyQxr"
+        "id": "e8Ll7vR1S0oV"
       },
       "outputs": [],
       "source": [
@@ -233,7 +233,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "8LnGnAx_yQxs"
+        "id": "TYni7ib6S0oW"
       },
       "source": [
         "### 38.3 How many rows and columns does the code below produce?\n",
@@ -260,9 +260,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 87,
+      "execution_count": 7,
       "metadata": {
-        "id": "4600r9LcyQxs"
+        "id": "bgryRipYS0oW"
       },
       "outputs": [],
       "source": [
@@ -272,7 +272,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6cEsABpeyQxs"
+        "id": "yMwmO5MDS0oW"
       },
       "source": [
         "---\n",
@@ -287,10 +287,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 88,
+      "execution_count": 8,
       "metadata": {
-        "id": "liFPA7ywyQxs",
-        "outputId": "2a40ed15-557a-423c-cdc6-d1557798be47",
+        "id": "Bxrsu8f5S0oW",
+        "outputId": "dfebfee7-92b1-4117-bab8-40410e3e8cfb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -300,13 +300,22 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: boto3 in /usr/local/lib/python3.10/dist-packages (1.28.73)\n",
-            "Requirement already satisfied: botocore<1.32.0,>=1.31.73 in /usr/local/lib/python3.10/dist-packages (from boto3) (1.31.73)\n",
-            "Requirement already satisfied: jmespath<2.0.0,>=0.7.1 in /usr/local/lib/python3.10/dist-packages (from boto3) (1.0.1)\n",
-            "Requirement already satisfied: s3transfer<0.8.0,>=0.7.0 in /usr/local/lib/python3.10/dist-packages (from boto3) (0.7.0)\n",
-            "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.73->boto3) (2.8.2)\n",
-            "Requirement already satisfied: urllib3<2.1,>=1.25.4 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.73->boto3) (2.0.7)\n",
-            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.32.0,>=1.31.73->boto3) (1.16.0)\n",
+            "Collecting boto3\n",
+            "  Downloading boto3-1.28.79-py3-none-any.whl (135 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m135.8/135.8 kB\u001b[0m \u001b[31m3.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting botocore<1.32.0,>=1.31.79 (from boto3)\n",
+            "  Downloading botocore-1.31.79-py3-none-any.whl (11.3 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m11.3/11.3 MB\u001b[0m \u001b[31m30.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting jmespath<2.0.0,>=0.7.1 (from boto3)\n",
+            "  Downloading jmespath-1.0.1-py3-none-any.whl (20 kB)\n",
+            "Collecting s3transfer<0.8.0,>=0.7.0 (from boto3)\n",
+            "  Downloading s3transfer-0.7.0-py3-none-any.whl (79 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m79.8/79.8 kB\u001b[0m \u001b[31m8.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: python-dateutil<3.0.0,>=2.1 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.79->boto3) (2.8.2)\n",
+            "Requirement already satisfied: urllib3<2.1,>=1.25.4 in /usr/local/lib/python3.10/dist-packages (from botocore<1.32.0,>=1.31.79->boto3) (2.0.7)\n",
+            "Requirement already satisfied: six>=1.5 in /usr/local/lib/python3.10/dist-packages (from python-dateutil<3.0.0,>=2.1->botocore<1.32.0,>=1.31.79->boto3) (1.16.0)\n",
+            "Installing collected packages: jmespath, botocore, s3transfer, boto3\n",
+            "Successfully installed boto3-1.28.79 botocore-1.31.79 jmespath-1.0.1 s3transfer-0.7.0\n",
             "=============================================\n",
             "== RESULTS for hgugulothu@slu.edu\n",
             "=============================================\n",
@@ -333,7 +342,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "EgzfXHlfyQxs"
+        "id": "i7l7Jkk0S0oW"
       },
       "source": [
         "---\n",
