--- a/week09/week09_assignment_2.ipynb
+++ b/week09/week09_assignment_2.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Harischandra359/hds5210-2023/blob/main/week09/week09_assignment_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "PlU6XEPunb9z"
       },
       "source": [
@@ -880,21 +890,20 @@
       },
       "source": [
         "### YOUR RESPONSE:\n",
-        "From the histograms provided, we can observe the following:\n",
-        " Distribution of 'IP Cash Price' and 'IP Charge':\n",
-        "   - The first set of histograms displays the distribution of 'IP Cash Price' and 'IP Charge' in the dataset.\n",
-        "   - Both histograms show that the majority of data points are concentrated in the lower price range.\n",
-        "   - The 'IP Cash Price' histogram shows a long tail to the right, indicating that there are some high-priced outliers.\n",
-        "   - The 'IP Charge' histogram also has a long tail to the right, suggesting the presence of high charges.\n",
-        " Range of 'IP Cash Price' and 'IP Charge':\n",
-        "   - The second set of histograms displays the same data but limits the range to values between 0 and 40,000.\n",
-        "   - By restricting the range, we get a clearer view of the distribution within this price range.\n",
-        "   - Both 'IP Cash Price' and 'IP Charge' histograms still show that the majority of values are on the lower end, but it's easier to see the distribution within this specific price range.\n",
-        " High-Cost Data Points:\n",
-        "   - The code segment that follows the histograms identifies data points where 'IP Charge' exceeds $100,000.\n",
-        "   - It lists the rows of data where the 'IP Charge' is exceptionally high.\n",
-        "   - This highlights that there are cases with extremely high charges for inpatient care.\n",
-        "In summary, the histograms provide insights into the distribution of 'IP Cash Price' and 'IP Charge' in the dataset. Most data points are concentrated in the lower price range, but there are outliers with very high charges. The code also identifies and displays specific rows with extremely high 'IP Charge' values for further investigation.\n",
+        "The following observations can be made based on the supplied histograms:\n",
+        "Distribution of \"IP Cash Price\" and \"IP Charge\":\n",
+        "- The first set of histograms shows the distribution of “IP Cash Price” and “IP Charge” in the dataset.\n",
+        "- Both the histograms show that most of the data points concentrate in the lower price segment.\n",
+        "- The “IP Cash Price” histogram shows some pricey outliers at its long tail end.\n",
+        "There is an additional ‘ip Charge’ histogram with a long tail directed to the right and is the longest.\n",
+        "- Range of \"IP Charge\" and \"IP Cash Price\": Secondly, in another pair of histograms, the data are presented as before, but the range is limited to 0 – 40,000 values.\n",
+        "- Through limiting the range, we are able to see the various distributions within and outside this price band.\n",
+        "- The data still shows a bulk on the lower side of the ‘IP Cash Price’ as well as ‘IP Charg’. However, it is easier to spot the distribution therein.\n",
+        "High-Cost Data Points:\n",
+        "- Afterwards the code recognizes at which ‘IP Charge’ is more than hundred thousand dollars.\n",
+        "- This contains all of those rows in which the ‘IP charge’ is remarkably high.\n",
+        "- This shows that extreme cases of high cost inpatient care exist.\n",
+        "Overall, the histograms shed light on the distribution of “IP Cash Price” and “IP Charges” among the data set. There is a cluster of most datapoints at lower prices, but it also has outliers characterized by high fees. The code also indicates and shows particular rows of very high ‘IP Charges’ which should be thoroughly investigated.\n",
         "\n",
         "Double-click this cell to edit and provide your response\n"
       ]
@@ -969,10 +978,10 @@
       "source": [
         "### YOUR RESPONSE:\n",
         "The overlapping Kernel Density Estimation (KDE) plot provides insights into the distribution of these values:\n",
-        "IP Cash Price (the amount an individual would pay) has a peak at a lower value, indicating that most cases involve lower out-of-pocket expenses. There is a long tail to the right, suggesting a few cases with significantly higher cash prices.\n",
-        "IP Charge (the maximum billed amount) also has a peak at a lower value, indicating that the majority of cases have lower maximum charges. There is a right-skewed distribution, indicating the presence of outliers with high charges.\n",
-        "IP Expected Reimbursement (the contracted payment from insurance) shows a peak at a relatively lower value, suggesting that most cases have lower expected reimbursements from insurance. It also has a right-skewed distribution with a long tail, indicating that some cases have higher expected reimbursements.\n",
-        "In summary, the KDE plot illustrates that the majority of cases have lower cash prices, lower maximum charges, and lower expected reimbursements, but there are outliers with significantly higher values in all three categories.\n",
+        "- IP Cash Price (the amount an individual would pay) has a peak at a lower value, indicating that most cases involve lower out-of-pocket expenses. There is a long tail to the right, suggesting a few cases with significantly higher cash prices.\n",
+        "- IP Charge (the maximum billed amount) also has a peak at a lower value, indicating that the majority of cases have lower maximum charges. There is a right-skewed distribution, indicating the presence of outliers with high charges.\n",
+        "- IP Expected Reimbursement (the contracted payment from insurance) shows a peak at a relatively lower value, suggesting that most cases have lower expected reimbursements from insurance. It also has a right-skewed distribution with a long tail, indicating that some cases have higher expected reimbursements.\n",
+        "- In summary, the KDE plot illustrates that the majority of cases have lower cash prices, lower maximum charges, and lower expected reimbursements, but there are outliers with significantly higher values in all three categories.\n",
         "\n"
       ]
     },
@@ -1119,14 +1128,14 @@
         "### YOUR RESPONSE:\n",
         "From the KDE (Kernel Density Estimation) plots of 'IP Expected Reimbursement' based on different payers, we can make the following observations:\n",
         "1. ALLWELL [15100] and HEALTHSCOPE [95700]:\n",
-        "   - These two payers have distributions with peaks shifted to the left (lower expected reimbursements), indicating that the majority of their recorded reimbursements are lower.\n",
-        "2. ARKANSAS TOTAL CARE [40700]:   - The distribution for this payer has a peak at a relatively higher expected reimbursement, indicating that a significant portion of the recorded reimbursements is on the higher side.\n",
-        "3. AETNA [65000], AR BLUE CROSS BLUE SHIELD [25001], and MULTIPLAN:   - These payers have distributions with peaks somewhere in between, suggesting that their expected reimbursements vary but are not as concentrated at the extremes as the previous two payers.\n",
+        "- The distributions for these two payers peaked towards the left-hand side (signifying lower than expected reimbursements) implying that most of their recorded reimbursement values were subnormal.\n",
+        "2. ARKANSAS TOTAL CARE [40700]: - A graph depicting such a payer’s distribution shows a prominent top end at relatively high anticipated reimburses, meaning that sizable amount of the noted reimburses are towards the upper end.\n",
+        "3. AETNA [65000], AR BLUE CROSS BLUE SHIELD [25001], and MULTIPLAN: Moreover, these payer’s distributions peak somewhere in between indicate that the expected reimbursement for them do differ from one another but not so much near the extreme ends compared to the first two payers discussed above.\n",
         "Overall, these patterns in reimbursement suggest that different insurance plans have varying patterns of expected reimbursements for the same services:\n",
-        "- ALLWELL [15100] and HEALTHSCOPE [95700] tend to have lower expected reimbursements, indicating a potentially more cost-conscious approach.\n",
-        "- ARKANSAS TOTAL CARE [40700] appears to have higher expected reimbursements, suggesting a potentially more generous reimbursement policy.\n",
-        "- AETNA [65000], AR BLUE CROSS BLUE SHIELD [25001], and MULTIPLAN have more balanced distributions with reimbursements that are neither extremely low nor high.\n",
-        "These observations provide insights into how different insurance plans handle reimbursements for healthcare services and may reflect their respective coverage and pricing strategies.\n",
+        "- The expected reimbursement for ALLWELL[15100] and HEALTHSCOPE[95700] is usually low suggesting a price consciousness approach.\n",
+        "- The expected reimbursements seem to be much higher in ARKANSAS TOTAL CARE [40700], which might imply a relatively friendly payment policy.\n",
+        "- On the other hand, AETNA [65000], AR blues, Blue Cross Blue Shield [25001] and multiplan have more balanced distributions where the reimbursements are neither very low nor high\n",
+        "This is inferred from these observations as different insurances operate their reimbursements and can be indicative of their coverage pricing policies.\n",
         "\n",
         "Double-click this cell to edit and provide your response\n"
       ]
@@ -1230,11 +1239,11 @@
         "### YOUR RESPONSE:\n",
         "From the scatterplots and the attempted code, we can observe the following:\n",
         "1. IP Charge vs. IP Expected Reimbursement Scatterplot:\n",
-        "   - The scatterplot of 'IP Charge' (x-axis) and 'IP Expected Reimbursement' (y-axis) shows a general positive correlation, meaning that as the 'IP Charge' increases, the 'IP Expected Reimbursement' also tends to increase. However, the relationship is not strictly linear, and there is some scattering of data points.\n",
-        "2. Payer-Specific Scatterplots: The code attempts to create scatterplots for different payers, comparing 'IP Cash Price' (x-axis) and 'IP Expected Reimbursement' (y-axis) for each payer.\n",
-        "   - Each subplot represents a different insurance payer, and the scatterplots show the relationship between cash prices and expected reimbursements for specific plans.\n",
-        "   - Unfortunately, there is an error in the code, and it's not generating the payer-specific scatterplots as intended. The code might need some adjustments to work correctly.\n",
-        "In summary, the scatterplot of 'IP Charge' and 'IP Expected Reimbursement' indicates a positive correlation between the two variables. However, the payer-specific scatterplots were not successfully generated due to an error in the code. To analyze the relationship between 'IP Cash Price' and 'IP Expected Reimbursement' for specific payers, further adjustments to the code are needed.\n",
+        "- The plot generally shows a positive correlation between ‘IP Charge’ on the x-axis and ‘IP Expected Reimbursement’ on the y-axis. Nevertheless, it is not a uniform relationship and there are few deviations in the data points.\n",
+        "2. Payer-Specific Scatterplots: Its goal is to generate scatterplots based on ‘payers’ having IP Cash Price as an x axis value and IP Expected Reimbursement on a y axis.\n",
+        "- For each subplot, there is a different insurance payer, and there are scatterplots illustrating the relationships between cash prices and expected reimbursements on various plans.\n",
+        "- Unluckily, the error in the script does not give the required patient-specific scatter plots. There may be changes that need to be made on the code to get it working well.\n",
+        "Overall, the link between IP charge and IP expected reimbursement is represented by the scatterplot, which shows a positive relationship between the two variables. Unfortunately, my code failed and could not produce payer-specific scatterplots. Additional changes in the code are necessary for analysis of the correlation between ‘IP Cash price’ and ‘IP Expected Reimbursed’ for certain payers.\n",
         "\n",
         "Double-click this cell to edit and provide your response\n"
       ]
@@ -1262,7 +1271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "DgVufrtgnb-G",
         "outputId": "8c4cb925-1faa-456d-d913-9f23a9f00188",
@@ -1854,7 +1863,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "l-N9lG2nnb-G",
         "outputId": "84a8bb9f-6425-4167-d72a-dbe94ea9be44",
@@ -1897,14 +1906,14 @@
       },
       "source": [
         "### Observations #1\n",
-        "The histogram provides an overview of the distribution of values in the 'cbsa' column. The x-axis represents the range of values, and the y-axis represents the frequency or count of occurrences within each range. Based on the histogram, we can observe that the 'cbsa' values are not evenly distributed. There appear to be one or more peaks, which may indicate that certain 'cbsa' values are more common than others. This information could be valuable for understanding the concentration or prevalence of certain areas or categories in your dataset. Further analysis and domain knowledge might be needed to interpret these findings in more detail.\n",
+        "The histogram shows at a glance how values are distributed in the ‘cbsa’ column. On the X axis we have the value ranges that while on the Y axis is the frequency or counts for each one of them. From the histogram, it is evident that ‘cbsa’ values were not uniform. At their best these ‘CBSAs’ values seem to be more numerous and peak at some point, meaning that they are not uniformly distributed across this area. Such information can help explain why some areas or categories are highly concentrated in the data set you have collected. In detail, further analysis together with domain knowledge should be applied to explain these results.\n",
         "\n",
         "_Double-click this text and then edit it to put in your observations_"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "2k7cLHmJnb-G",
         "outputId": "835bba5f-40df-4ab6-f768-ad23a83832c8",
@@ -2007,7 +2016,8 @@
       "version": "3.9.16"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
